feat: Story 01 - Criar estrutura base do projeto KitchenFlow
- Criada soluÃ§Ã£o .NET 8 com 9 projetos (Domain, Application, Infra, Infra.Persistence, CrossCutting, Api, Migrator, Tests.Unit, Tests.Bdd)
- Configuradas dependÃªncias entre projetos seguindo Clean Architecture
- Criada estrutura de pastas em cada projeto conforme especificaÃ§Ã£o
- Implementado HealthController com endpoint GET /api/health
- Configurado Swagger e Program.cs da API
- Adicionado CORS e ajustes para funcionamento correto do Swagger
- Atualizado .gitignore para ignorar arquivos do Visual Studio e temporÃ¡rios
- Todos os projetos compilam sem erros
- API testada e funcionando corretamente

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,22 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
+# Visual Studio cache/options/目录
+.vs/
+.vscode/
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+*.userprefs
+
+# Visual Studio Code
+*.code-workspace
+
+# Rider
+.idea/
+*.sln.iml
+
 # .NET Core
 project.lock.json
 project.fragment.lock.json
@@ -36,13 +52,86 @@ ScaffoldingReadMe.txt
 # NuGet Symbol Packages
 *.snupkg
 
+# Files built by Visual Studio
+*_i.c
+*_p.c
+*_h.h
+*.ilk
+*.meta
+*.obj
+*.iobj
+*.pch
+*.pdb
+*.ipdb
+*.pgc
+*.pgd
+*.rsp
+*.sbr
+*.tlb
+*.tli
+*.tlh
+*.tmp
+*.tmp_proj
+*_wpftmp.csproj
+*.vspscc
+*.vssscc
+.builds
+*.pidb
+*.svclog
+*.scc
+
+# ReSharper
+_ReSharper*/
+*.[Rr]e[Ss]harper
+*.DotSettings.user
+
+# CodeRush
+.cr/
+
+# Python Tools for Visual Studio (PTVS)
+__pycache__/
+*.pyc
+
+# Tabs Studio
+*.tss
+
+# Telerik's JustMock configuration file
+*.jmconfig
+
+# BizTalk build output
+*.btp.cs
+*.btm.cs
+*.odx.cs
+*.xsd.cs
+
+# OpenCover UI analysis results
+OpenCover/
+
+# Azure Stream Analytics local run output
+ASALocalRun/
+
+# MSBuild Binary and Structured Log
+*.binlog
+
+# NVidia Nsight GPU debugger configuration file
+*.nvuser
+
+# MFractors (Xamarin productivity tool) working folder
+.mfractor/
+
+# Local History for Visual Studio
+.localhistory/
+
+# Backup folder for Package Reference Convert tool in Visual Studio 2017
+MigrationBackup/
+
+# Ionide (cross platform F# VS Code tools) working folder
+.ionide/
+
 # Others
 ~$*
 *~
 CodeCoverage/
-
-# MSBuild Binary and Structured Log
-*.binlog
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
@@ -52,3 +141,6 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+
+# BeatPulse healthcheck temp db
+healthchecksdb
