refatoracao de pastas

--- a/src/InterfacesExternas/FastFood.KitchenFlow.Api/FastFood.KitchenFlow.Api.csproj
+++ b/src/InterfacesExternas/FastFood.KitchenFlow.Api/FastFood.KitchenFlow.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -14,8 +14,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Core\FastFood.KitchenFlow.Application\FastFood.KitchenFlow.Application.csproj" />
     <ProjectReference Include="..\..\Core\FastFood.KitchenFlow.CrossCutting\FastFood.KitchenFlow.CrossCutting.csproj" />
-    <ProjectReference Include="..\..\Core\FastFood.KitchenFlow.Infra\FastFood.KitchenFlow.Infra.csproj" />
-    <ProjectReference Include="..\..\Core\FastFood.KitchenFlow.Infra.Persistence\FastFood.KitchenFlow.Infra.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
