--- a/src/tests/FastFood.KitchenFlow.Tests.Unit/FastFood.KitchenFlow.Tests.Unit.csproj
+++ b/src/tests/FastFood.KitchenFlow.Tests.Unit/FastFood.KitchenFlow.Tests.Unit.csproj
@@ -23,9 +23,9 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Core\FastFood.KitchenFlow.Domain\FastFood.KitchenFlow.Domain.csproj" />
     <ProjectReference Include="..\..\Core\FastFood.KitchenFlow.Application\FastFood.KitchenFlow.Application.csproj" />
-    <ProjectReference Include="..\..\Core\FastFood.KitchenFlow.Infra\FastFood.KitchenFlow.Infra.csproj" />
-    <ProjectReference Include="..\..\Core\FastFood.KitchenFlow.Infra.Persistence\FastFood.KitchenFlow.Infra.Persistence.csproj" />
     <ProjectReference Include="..\..\Core\FastFood.KitchenFlow.CrossCutting\FastFood.KitchenFlow.CrossCutting.csproj" />
+    <ProjectReference Include="..\..\Infra\FastFood.KitchenFlow.Infra.Persistence\FastFood.KitchenFlow.Infra.Persistence.csproj" />
+    <ProjectReference Include="..\..\Infra\FastFood.KitchenFlow.Infra\FastFood.KitchenFlow.Infra.csproj" />
   </ItemGroup>
 
 </Project>
