--- a/.github/workflows/push-ecr.yml
+++ b/.github/workflows/push-ecr.yml
@@ -36,10 +36,10 @@ jobs:
 
     - name: Login to Amazon ECR
       id: login-ecr
-      # v2.2.0
-      # IMPORTANTE: Substitua o SHA abaixo pelo SHA real da versão v2.2.0
-      # Acesse: https://github.com/aws-actions/amazon-ecr-login/releases/tag/v2.2.0
-      uses: aws-actions/amazon-ecr-login@a1b2c3d4e5f6g7h8i9j0k1l2m3n4o5p6q7r8s9t0
+      # v2.0.1 (latest v2)
+      # SHA: 062b18b96a7aff071d4dc91bc00c4c1a7945b076
+      # Acesse: https://github.com/aws-actions/amazon-ecr-login/releases/tag/v2.0.1
+      uses: aws-actions/amazon-ecr-login@062b18b96a7aff071d4dc91bc00c4c1a7945b076
 
     - name: Get ECR registry
       id: ecr-registry
