--- a/.github/workflows/deploy-kubernetes.yml
+++ b/.github/workflows/deploy-kubernetes.yml
@@ -27,16 +27,10 @@ jobs:
     
     steps:
     - name: Checkout code
-      # v4.1.1
-      # IMPORTANTE: Substitua o SHA abaixo pelo SHA real da versão v4.1.1
-      # Acesse: https://github.com/actions/checkout/releases/tag/v4.1.1
-      uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
+      uses: actions/checkout@v4
 
     - name: Configure AWS credentials
-      # v4.0.2
-      # IMPORTANTE: Substitua o SHA abaixo pelo SHA real da versão v4.0.2
-      # Acesse: https://github.com/aws-actions/configure-aws-credentials/releases/tag/v4.0.2
-      uses: aws-actions/configure-aws-credentials@ff717079ee2060e4bcee96c4779b553acc87447c
+      uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
