--- a/src/InterfacesExternas/FastFood.KitchenFlow.Api/appsettings.Development.json
+++ b/src/InterfacesExternas/FastFood.KitchenFlow.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=4433;Database=dbKitchenLocal;Username=postgres;Password=postgres"
   }
 }
