--- a/src/InterfacesExternas/FastFood.KitchenFlow.Migrator/appsettings.json
+++ b/src/InterfacesExternas/FastFood.KitchenFlow.Migrator/appsettings.json
@@ -1,9 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=4433;Database=dbKitchenLocal;Username=postgres;Password=postgres"
   }
 }
 
