--- a/src/InterfacesExternas/FastFood.KitchenFlow.Api/appsettings.json
+++ b/src/InterfacesExternas/FastFood.KitchenFlow.Api/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "Urls": "http://localhost:5000;https://localhost:5001",
+  "Urls": "http://localhost:5010;https://localhost:5011",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=4433;Database=dbKitchenLocal;Username=postgres;Password=postgres"
+    "DefaultConnection": ""
   }
 }
