--- a/src/InterfacesExternas/FastFood.KitchenFlow.Migrator/FastFood.KitchenFlow.Migrator.csproj
+++ b/src/InterfacesExternas/FastFood.KitchenFlow.Migrator/FastFood.KitchenFlow.Migrator.csproj
@@ -18,4 +18,13 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="appsettings.*.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
