api comunicacao de micro servicos autenticacao cognito

--- a/src/InterfacesExternas/FastFood.KitchenFlow.Api/appsettings.json
+++ b/src/InterfacesExternas/FastFood.KitchenFlow.Api/appsettings.json
@@ -9,5 +9,18 @@
   "Urls": "http://localhost:5010;https://localhost:5011",
   "ConnectionStrings": {
     "DefaultConnection": ""
+  },
+  "Authentication": {
+    "Cognito": {
+      "Region": "us-east-1",
+      "UserPoolId": "",
+      "ClientId": "",
+      "ClockSkewMinutes": 5
+    }
+  },
+  "JwtCustomer": {
+    "Issuer": "FastFood.Auth",
+    "Audience": "FastFood.API",
+    "SecretKey": ""
   }
 }
