--- a/src/InterfacesExternas/FastFood.KitchenFlow.Migrator/appsettings.json
+++ b/src/InterfacesExternas/FastFood.KitchenFlow.Migrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5433;Database=dbKitchenLocal;Username=postgres;Password=postgres"
+    "DefaultConnection": ""
   }
 }
 
