--- a/src/tests/FastFood.KitchenFlow.Tests.Bdd/FastFood.KitchenFlow.Tests.Bdd.csproj
+++ b/src/tests/FastFood.KitchenFlow.Tests.Bdd/FastFood.KitchenFlow.Tests.Bdd.csproj
@@ -11,7 +11,10 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="coverlet.msbuild" Version="6.0.0" />
+    <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="SpecFlow" Version="3.9.74" />
     <PackageReference Include="SpecFlow.xUnit" Version="3.9.74" />
     <PackageReference Include="xunit" Version="2.5.3" />
